[package]
name = "rust-warp-bb8-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls" ] }
dotenv = "0.15.0"
bb8-postgres = "0.7.0"